--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,3 +18,17 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Push the backend Docker image
       run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/accommodations-backend:latest
+
+  build-and-push-frontend-image:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build the frontend Docker image
+      run: docker build ./frontend --file ./frontend/Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/accommodations-frontend:latest
+    - name: Log in to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Push the frontend Docker image
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/accommodations-frontend:latest
