--- a/kubernetes/frontend-deployment.yaml
+++ b/kubernetes/frontend-deployment.yaml
@@ -18,3 +18,6 @@ spec:
           image: swiftmg0d/accommodations-frontend:latest
           ports:
             - containerPort: 5173
+          env:
+            - name: VITE_BACKEND_URL
+              value: "http://placeholder/backend"
