--- a/kubernetes/config_secret.yaml
+++ b/kubernetes/config_secret.yaml
@@ -1,4 +1,12 @@
 apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: backend-configmap
+  namespace: accommodations
+data:
+  SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/accommodations
+---
+apiVersion: v1
 kind: Secret
 metadata:
   name: backend-secret
