change ingress,service yaml

--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -21,8 +21,7 @@ spec:
   selector:
     app: backend
   ports:
-    - protocol: TCP
-      port: 8080
+    - port: 8080
       targetPort: 8080
   type: LoadBalancer
 
@@ -36,7 +35,6 @@ spec:
   selector:
     app: frontend
   ports:
-    - protocol: TCP
-      port: 5173
+    - port: 5173
       targetPort: 5173
   type: LoadBalancer
