--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -3,13 +3,10 @@ kind: Ingress
 metadata:
   name: frontend-ingress
   namespace: accommodations
-  annotations:
-    kubernetes.io/ingress.class: "traefik"
-    traefik.ingress.kubernetes.io/router.entrypoints: "web"
 spec:
+  ingressClassName: nginx
   rules:
-    - host: frontend.accommodations.example.com
-      http:
+    - http:
         paths:
           - pathType: Prefix
             path: "/"
